Version 1.0.3
~~~~~~~~~~~~~
* Post DiFX-1.5.2

Version 1.0.2
~~~~~~~~~~~~~
* Add support for VLBN "format" -- that is VLBA with no data modulation
* Improved printing in corrparams, added tolerance for clock date detection
* Treat warnings as errors; use --force to override
* Fix some compiler warnings
* Add deltaClock and deltaClockRate
* Further fix to generated flags when an antenna is not in a job
* More user warnings
* This is the version for DiFX-1.5.2

Version 1.0.1
~~~~~~~~~~~~~
* Post DiFX-1.5.1
* Improved algorithm for determining blocks per send
* Zero length scans are ignored
* Warn if no clock values are applied on a job/antenna basis
* Don't let send duration exceed 2 seconds
* oms2v2d respects TWEAK_INT_TIME parameter

Version 1.0
~~~~~~~~~~~
* oms2v2d: correct use of POLARIZATION
* Version for DiFX-1.5.1

Version 0.2.3
~~~~~~~~~~~~~
* Mark5B support
* format override support
* Pulsar profile mode
* Split jobs at leap second
* ANTENNA blocks get antenna names capitalized
* Clean up parsing of .v2d a little bit
* (Adam) Initialize some ANTENNA block variables
* (Adam) Clean up LBA format
* Support a wider range of time formats in the .v2d file
* Make .v2d parameters "mjdStart" and "mjdStop" operate at specified times, not 
  at scan boundaries
* EOP table support from within .v2d file
* Support eVLBI via writing of Network table

Version 0.2.2
~~~~~~~~~~~~~
* Fix clock offset of up to 6 picoseconds in simFXCORR mode
* Don't write flag based on RECORD if correlating files
* Fix some initialization information

Version 0.2.1
~~~~~~~~~~~~~
* Post DiFX-1.5
* Change sign convention associated with vex file
   Note on clock sign conventions: As far as I (WFB) can tell, vex uses one sign
   convention and the VLBA, DiFX and FITS all use the other.
* Don't let VSN=None get through.
* Allow file-based correlation using ANTENNA block values file= and filelist=
* Fix splitting jobs at clock boundaries
* Add minLength parameter